fix primitive object constructor deprecations