@@ -743,7 +743,7 @@ public class BurlapOutput extends AbstractBurlapOutput {
       return true;
     }
     else {
-      _refs.put(object, new Integer(_refs.size()));
+      _refs.put(object, Integer.valueOf(_refs.size()));
       
       return false;
     }
