@@ -410,11 +410,11 @@ public class JavaDeserializer extends AbstractMapDeserializer {
     else if (boolean.class.equals(cl))
       return Boolean.FALSE;
     else if (byte.class.equals(cl))
-      return new Byte((byte) 0);
+      return Byte.valueOf((byte) 0);
     else if (short.class.equals(cl))
-      return new Short((short) 0);
+      return Short.valueOf((short) 0);
     else if (char.class.equals(cl))
-      return new Character((char) 0);
+      return Character.valueOf((char) 0);
     else if (int.class.equals(cl))
       return Integer.valueOf(0);
     else if (long.class.equals(cl))
